fix: Fix the bug that text about the state of the boat is not centered

--- a/front/src/views/BoatDetailsView.module.css
+++ b/front/src/views/BoatDetailsView.module.css
@@ -2,6 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: center !important;
+}
+
+.dispositioncenter > * > * {
+    margin-top: 0 !important;
 }
 
 .dispositioncenter span {
